force-app/main/default/objects/BET_BDD_Form__c/fields/GT_BDD_Commodity__c.field-meta.xml
<CustomField>
    <fullName>GT_BDD_Commodity__c</fullName>
    <label>* BDD Commodity</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All Commodities</fullName>
            </value>
            <value>
                <fullName>Crude</fullName>
            </value>
            <value>
                <fullName>Crude/Products/LNG</fullName>
            </value>
            <value>
                <fullName>Freight</fullName>
            </value>
            <value>
                <fullName>Gas</fullName>
            </value>
            <value>
                <fullName>Gas &amp; Power</fullName>
            </value>
            <value>
                <fullName>Gas &amp; Power or Emissions</fullName>
            </value>
            <value>
                <fullName>Gas &amp; Power or Emissions or Coal</fullName>
            </value>
            <value>
                <fullName>LNG</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Products</fullName>
            </value>
            <value>
                <fullName>Shipping</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>