force-app/main/default/objects/BET_BDD_Form__c/fields/GT_BDD_Region_Role_Comm__c.field-meta.xml
<CustomField>
    <fullName>GT_BDD_Region_Role_Comm__c</fullName>
    <label>* BDD Region | Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ANZPI | Bank for LC</fullName>
            </value>
            <value>
                <fullName>ANZPI | Bunker Fuels End User</fullName>
            </value>
            <value>
                <fullName>ANZPI | C&amp;I Physical End User</fullName>
            </value>
            <value>
                <fullName>ANZPI | C&amp;I Physical Resellers</fullName>
            </value>
            <value>
                <fullName>ANZPI | Commercial Fuels End User</fullName>
            </value>
            <value>
                <fullName>ANZPI | End User</fullName>
            </value>
            <value>
                <fullName>ANZPI | JV / Majority Shell-owned (Non-Trading)</fullName>
            </value>
            <value>
                <fullName>ANZPI | Leaseholders/Crude Lease</fullName>
            </value>
            <value>
                <fullName>ANZPI | Shipping - Basic</fullName>
            </value>
            <value>
                <fullName>ANZPI | Storage</fullName>
            </value>
            <value>
                <fullName>ANZPI | Terminalling</fullName>
            </value>
            <value>
                <fullName>ANZPI | Transportation(non-shipping)</fullName>
            </value>
            <value>
                <fullName>ANZPI | TSO/DSO</fullName>
            </value>
            <value>
                <fullName>APAC | Bank for LC</fullName>
            </value>
            <value>
                <fullName>APAC | Bunker Fuels End User</fullName>
            </value>
            <value>
                <fullName>APAC | C&amp;I Physical End User</fullName>
            </value>
            <value>
                <fullName>APAC | C&amp;I Physical Resellers</fullName>
            </value>
            <value>
                <fullName>APAC | Commercial Fuels End User</fullName>
            </value>
            <value>
                <fullName>APAC | End User</fullName>
            </value>
            <value>
                <fullName>APAC | JV / Majority Shell-owned (Non-Trading)</fullName>
            </value>
            <value>
                <fullName>APAC | Leaseholders/Crude Lease</fullName>
            </value>
            <value>
                <fullName>APAC | Shipping - Basic</fullName>
            </value>
            <value>
                <fullName>APAC | Storage</fullName>
            </value>
            <value>
                <fullName>APAC | Terminalling</fullName>
            </value>
            <value>
                <fullName>APAC | Transportation(non-shipping)</fullName>
            </value>
            <value>
                <fullName>APAC | TSO/DSO</fullName>
            </value>
            <value>
                <fullName>ERCIS | Bank for LC</fullName>
            </value>
            <value>
                <fullName>ERCIS | Bunker Fuels End User</fullName>
            </value>
            <value>
                <fullName>ERCIS | C&amp;I Physical End User</fullName>
            </value>
            <value>
                <fullName>ERCIS | C&amp;I Physical Resellers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>