force-app/main/default/objects/BET_BDD_Form__c/fields/GT_Contact_With_CP__c.field-meta.xml
<CustomField>
    <fullName>GT_Contact_With_CP__c</fullName>
    <inlineHelpText>How did you come into contact with this counterparty?</inlineHelpText>
    <label>* How was contact made with this CP?</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>