force-app/main/default/objects/BET_BDD_Form__c/fields/GT_Core_Business_Act__c.field-meta.xml
<CustomField>
    <fullName>GT_Core_Business_Act__c</fullName>
    <label>* Core Business Activity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agents/Inspectors</fullName>
            </value>
            <value>
                <fullName>Brokers - Clearing</fullName>
            </value>
            <value>
                <fullName>Brokers - Execution Only</fullName>
            </value>
            <value>
                <fullName>Brokers - inter dealer</fullName>
            </value>
            <value>
                <fullName>Financial Firms (e.g. banks, building societies)</fullName>
            </value>
            <value>
                <fullName>Leaseholders</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Producers</fullName>
            </value>
            <value>
                <fullName>Shipping</fullName>
            </value>
            <value>
                <fullName>Storage/Transportation (non Shipping)</fullName>
            </value>
            <value>
                <fullName>Trading houses</fullName>
            </value>
            <value>
                <fullName>User/End User</fullName>
            </value>
            <value>
                <fullName>Utilities</fullName>
            </value>
            <value>
                <fullName>Wholesale Customer</fullName>
            </value>
            <value>
                <fullName>Business Introducer - Agents &amp; Intermediaries</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>