force-app/main/default/objects/BET_BDD_Form__c/fields/GT_Counterparty_Type__c.field-meta.xml
<CustomField>
    <fullName>GT_Counterparty_Type__c</fullName>
    <label>* Counterparty Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>Third Party</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>