force-app/main/default/objects/BET_BDD_Form__c/fields/GT_Country_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>GT_Country_of_Birth__c</fullName>
    <label>Country of Birth</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BET_GT_Country</valueSetName>
    </valueSet>
</CustomField>