force-app/main/default/objects/BET_BDD_Form__c/fields/GT_Cust_Entity_Type_Class__c.field-meta.xml
<CustomField>
    <fullName>GT_Cust_Entity_Type_Class__c</fullName>
    <label>* Customer Entity Type | Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Bank/Financial Institution |</fullName>
            </value>
            <value>
                <fullName>Bank/Financial Institution | Co-operative</fullName>
            </value>
            <value>
                <fullName>Bank/Financial Institution | Fund</fullName>
            </value>
            <value>
                <fullName>Bank/Financial Institution | Partnership</fullName>
            </value>
            <value>
                <fullName>Bank/Financial Institution | Private Company</fullName>
            </value>
            <value>
                <fullName>Bank/Financial Institution | Public Company/Corporation</fullName>
            </value>
            <value>
                <fullName>Bank/Financial Institution | Trust/Foundation</fullName>
            </value>
            <value>
                <fullName>Branch</fullName>
                <isActive>false</isActive>
                <label>Branch</label>
            </value>
            <value>
                <fullName>Broker Dealer |</fullName>
            </value>
            <value>
                <fullName>Broker Dealer | Fund</fullName>
            </value>
            <value>
                <fullName>Broker Dealer | Partnership</fullName>
            </value>
            <value>
                <fullName>Broker Dealer | Private Company</fullName>
            </value>
            <value>
                <fullName>Broker Dealer | Public Company/Corporation</fullName>
            </value>
            <value>
                <fullName>Central Bank |</fullName>
            </value>
            <value>
                <fullName>Central Bank | Fund</fullName>
            </value>
            <value>
                <fullName>Central Bank | Private Company</fullName>
            </value>
            <value>
                <fullName>Central Bank | Public Company/Corporation</fullName>
            </value>
            <value>
                <fullName>Central Bank | Statutory Body</fullName>
            </value>
            <value>
                <fullName>Fund |</fullName>
            </value>
            <value>
                <fullName>Fund | Fund</fullName>
            </value>
            <value>
                <fullName>Fund | Partnership</fullName>
            </value>
            <value>
                <fullName>Fund | Private Company</fullName>
            </value>
            <value>
                <fullName>Fund | Public Company/Corporation</fullName>
            </value>
            <value>
                <fullName>Fund | Trust/Foundation</fullName>
            </value>
            <value>
                <fullName>Government Organisation |</fullName>
            </value>
            <value>
                <fullName>Government Organisation | Fund</fullName>
            </value>
            <value>
                <fullName>Government Organisation | Government Organisation/Department</fullName>
            </value>
            <value>
                <fullName>Government Organisation | Statutory Body</fullName>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Insurance Company |</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>