force-app/main/default/objects/BET_BDD_Form__c/fields/GT_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>GT_Date_of_Birth__c</fullName>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>