force-app/main/default/objects/BET_BDD_Form__c/fields/GT_Desk__c.field-meta.xml
<CustomField>
    <fullName>GT_Desk__c</fullName>
    <label>* Desk</label>
    <length>200</length>
    <type>Text</type>
</CustomField>