force-app/main/default/objects/BET_BDD_Form__c/fields/GT_Entity_Type__c.field-meta.xml
<CustomField>
    <fullName>GT_Entity_Type__c</fullName>
    <inlineHelpText>This field is auto-populated from &apos;Customer Entity Type | Classification&apos;</inlineHelpText>
    <label>* Entity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bank/Financial Institution</fullName>
            </value>
            <value>
                <fullName>Broker Dealer</fullName>
            </value>
            <value>
                <fullName>Central Bank</fullName>
            </value>
            <value>
                <fullName>Fund</fullName>
            </value>
            <value>
                <fullName>Government Organisation</fullName>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Insurance Company</fullName>
            </value>
            <value>
                <fullName>Investment Advisor</fullName>
            </value>
            <value>
                <fullName>Market Infrastructure</fullName>
            </value>
            <value>
                <fullName>Non-Financial Business</fullName>
            </value>
            <value>
                <fullName>Trust</fullName>
            </value>
            <value>
                <fullName>Vessel</fullName>
            </value>
            <value>
                <fullName>Branch</fullName>
                <isActive>false</isActive>
                <label>Branch</label>
            </value>
            <value>
                <fullName>Government Intermediary</fullName>
                <isActive>false</isActive>
                <label>Government Intermediary</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>