force-app/main/default/objects/BET_BDD_Form__c/fields/GT_GI__c.field-meta.xml
<CustomField>
    <fullName>GT_GI__c</fullName>
    <label>* BDD Government Intermediary</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes - Direct GI</fullName>
            </value>
            <value>
                <fullName>Yes - Indirect GI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>