force-app/main/default/objects/BET_BDD_Form__c/fields/GT_GoldTier_Id__c.field-meta.xml
<CustomField>
    <fullName>GT_GoldTier_Id__c</fullName>
    <label>GoldTier Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>