force-app/main/default/objects/BET_BDD_Form__c/fields/GT_Int_Business_Rel__c.field-meta.xml
<CustomField>
    <fullName>GT_Int_Business_Rel__c</fullName>
    <inlineHelpText>Please describe the intended business relationship.</inlineHelpText>
    <label>* Intended business relationship</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>