force-app/main/default/objects/BET_BDD_Form__c/fields/GT_Is_Comp_Reg__c.field-meta.xml
<CustomField>
    <fullName>GT_Is_Comp_Reg__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is the Company Registered?</label>
    <type>Checkbox</type>
</CustomField>