force-app/main/default/objects/BET_BDD_Form__c/fields/GT_Is_STASCO__c.field-meta.xml
<CustomField>
    <fullName>GT_Is_STASCO__c</fullName>
    <defaultValue>&quot;No&quot;</defaultValue>
    <label>* Is STASCO?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>