force-app/main/default/objects/BET_BDD_Form__c/fields/GT_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>GT_Last_Name__c</fullName>
    <label>* Last Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>