force-app/main/default/objects/BET_BDD_Form__c/fields/GT_Legal_Form__c.field-meta.xml
<CustomField>
    <fullName>GT_Legal_Form__c</fullName>
    <inlineHelpText>This field is auto-populated from &apos;Customer Entity Type | Classification&apos;</inlineHelpText>
    <label>* Legal Form</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Association</fullName>
            </value>
            <value>
                <fullName>Co-operative</fullName>
            </value>
            <value>
                <fullName>Fund</fullName>
            </value>
            <value>
                <fullName>Individual/Sole-Trader</fullName>
            </value>
            <value>
                <fullName>Partnership</fullName>
            </value>
            <value>
                <fullName>Private Company</fullName>
            </value>
            <value>
                <fullName>Public Company/Corporation</fullName>
            </value>
            <value>
                <fullName>Trust/Foundation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>