force-app/main/default/objects/BET_BDD_Form__c/fields/GT_Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>GT_Legal_Name__c</fullName>
    <label>* Legal Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>