force-app/main/default/objects/BET_BDD_Form__c/fields/GT_Nature_of_Business__c.field-meta.xml
<CustomField>
    <fullName>GT_Nature_of_Business__c</fullName>
    <label>* Nature of Business</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>