force-app/main/default/objects/BET_BDD_Form__c/fields/GT_Operating_Region__c.field-meta.xml
<CustomField>
    <fullName>GT_Operating_Region__c</fullName>
    <label>* Operating Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Global</fullName>
            </value>
            <value>
                <fullName>Local</fullName>
            </value>
            <value>
                <fullName>Regional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>