force-app/main/default/objects/BET_BDD_Form__c/fields/GT_OTC__c.field-meta.xml
<CustomField>
    <fullName>GT_OTC__c</fullName>
    <defaultValue>&quot;N/A&quot;</defaultValue>
    <label>* BDD OTC</label>
    <length>200</length>
    <type>Text</type>
</CustomField>