force-app/main/default/objects/BET_BDD_Form__c/fields/GT_Other_Relationship_Comment__c.field-meta.xml
<CustomField>
    <fullName>GT_Other_Relationship_Comment__c</fullName>
    <label>Other Relationship Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>