force-app/main/default/objects/BET_BDD_Form__c/fields/GT_Product_Risk__c.field-meta.xml
<CustomField>
    <fullName>GT_Product_Risk__c</fullName>
    <label>* Is this a high or low risk product?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>