force-app/main/default/objects/BET_BDD_Form__c/fields/GT_Rationale_OB_CP__c.field-meta.xml
<CustomField>
    <fullName>GT_Rationale_OB_CP__c</fullName>
    <inlineHelpText>What is your rationale for wanting to onboard this counterparty?</inlineHelpText>
    <label>* Rationale for Onboarding this CP?</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>