force-app/main/default/objects/BET_BDD_Form__c/fields/GT_Relationship__c.field-meta.xml
<CustomField>
    <fullName>GT_Relationship__c</fullName>
    <label>* Relationship</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>GT_Type_Of_RelationShip__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>End User</fullName>
            </value>
            <value>
                <fullName>Exchange Member</fullName>
            </value>
            <value>
                <fullName>Leaseholder</fullName>
            </value>
            <value>
                <fullName>Letter of Credit Bank</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pipes &amp; Wires</fullName>
            </value>
            <value>
                <fullName>Shell Internal (Non-Trading)</fullName>
            </value>
            <value>
                <fullName>Shell Internal (Trading)</fullName>
            </value>
            <value>
                <fullName>Shipping (all)</fullName>
            </value>
            <value>
                <fullName>Trading Platform</fullName>
            </value>
            <value>
                <fullName>Vendor</fullName>
            </value>
            <value>
                <fullName>Brokerage Services</fullName>
            </value>
            <value>
                <fullName>GSS Supply</fullName>
            </value>
            <value>
                <fullName>Trading</fullName>
            </value>
            <value>
                <fullName>Royalty Payee</fullName>
            </value>
            <value>
                <fullName>Transportation (Non-Shipping)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>