force-app/main/default/objects/BET_BDD_Form__c/fields/GT_Req_Name__c.field-meta.xml
<CustomField>
    <fullName>GT_Req_Name__c</fullName>
    <inlineHelpText>Check same as GoldTier username.</inlineHelpText>
    <label>* Requestor Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>