force-app/main/default/objects/BET_BDD_Form__c/fields/GT_Shell_Company__c.field-meta.xml
<CustomField>
    <fullName>GT_Shell_Company__c</fullName>
    <label>Shell Company</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1001 - Shell Energy NA US LP</fullName>
            </value>
            <value>
                <fullName>1022 - Shell Energy NA CA Inc</fullName>
            </value>
            <value>
                <fullName>1025 - Shell Trading Services Co</fullName>
            </value>
            <value>
                <fullName>1031 - Tejas Power Generation,LL</fullName>
            </value>
            <value>
                <fullName>1037 - Shell NA LNG</fullName>
            </value>
            <value>
                <fullName>1080 - Shell Trading Risk Mgt,LL</fullName>
            </value>
            <value>
                <fullName>1081 - MP2 Energy LLC</fullName>
            </value>
            <value>
                <fullName>1083 - Shell Energy Merchants Ca</fullName>
            </value>
            <value>
                <fullName>1084 - Shell Trading Mexico</fullName>
            </value>
            <value>
                <fullName>1086 - Shell Energy Mexico</fullName>
            </value>
            <value>
                <fullName>1087 - Shell Energy Brazil</fullName>
            </value>
            <value>
                <fullName>1984 - BG LNG Trading, LLC</fullName>
            </value>
            <value>
                <fullName>3100 - Shell Trading (US) Co.</fullName>
            </value>
            <value>
                <fullName>BGEG - BG Equatorial Guinea Ltd</fullName>
            </value>
            <value>
                <fullName>BGEL - Shell Global LNG Limited</fullName>
            </value>
            <value>
                <fullName>BGGC - BG Gulf Coast LNG, LLC</fullName>
            </value>
            <value>
                <fullName>BGGE - Shell Global LNG Ltd-SING</fullName>
            </value>
            <value>
                <fullName>BGGM - Shell Gas Marketing UKLtd</fullName>
            </value>
            <value>
                <fullName>BGGS - BG Gas Services Limited</fullName>
            </value>
            <value>
                <fullName>BGLS - BG LNG Services, LLC</fullName>
            </value>
            <value>
                <fullName>BGMS - Methane Services Limited</fullName>
            </value>
            <value>
                <fullName>BGSA - Shell South Asia LNG Ltd</fullName>
            </value>
            <value>
                <fullName>BGTS - BG LNG Trading LLC Singp</fullName>
            </value>
            <value>
                <fullName>BSL1 - Brazil Shipping I Ltd</fullName>
            </value>
            <value>
                <fullName>CLNG - Shell Energy China LNG</fullName>
            </value>
            <value>
                <fullName>DE02 - Shell Energy Deutschland</fullName>
            </value>
            <value>
                <fullName>DE03 - Shell Erdgas Marketing Gm</fullName>
            </value>
            <value>
                <fullName>DLNG - Shell Eastern Trading (Pt</fullName>
            </value>
            <value>
                <fullName>E001 - Enterprise Oil Limited</fullName>
            </value>
            <value>
                <fullName>E003 - Shell EP Offshore Venture</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>