force-app/main/default/objects/BET_BDD_Form__c/fields/GT_Ship_ID_Num_IMO__c.field-meta.xml
<CustomField>
    <fullName>GT_Ship_ID_Num_IMO__c</fullName>
    <label>* Ship Identification Number (IMO)</label>
    <length>200</length>
    <type>Text</type>
</CustomField>