force-app/main/default/objects/BET_BDD_Form__c/fields/GT_Short_Name__c.field-meta.xml
<CustomField>
    <fullName>GT_Short_Name__c</fullName>
    <label>* Short Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>