force-app/main/default/objects/BET_BDD_Form__c/fields/GT_Trading_Name__c.field-meta.xml
<CustomField>
    <fullName>GT_Trading_Name__c</fullName>
    <label>* Trading Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>