force-app/main/default/objects/BET_BDD_Form__c/fields/GT_Type_Of_RelationShip__c.field-meta.xml
<CustomField>
    <fullName>GT_Type_Of_RelationShip__c</fullName>
    <label>* What type of relationship is requested</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Basic Customer</fullName>
            </value>
            <value>
                <fullName>Exchange Member</fullName>
            </value>
            <value>
                <fullName>Non-Basic Customer</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Royalty Payee</fullName>
            </value>
            <value>
                <fullName>Technical Operator</fullName>
            </value>
            <value>
                <fullName>Vessel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>