force-app/main/default/objects/BET_BDD_Form__c/fields/GT_Were_any_deviations_applied_tothis_CP__c.field-meta.xml
<CustomField>
    <fullName>GT_Were_any_deviations_applied_tothis_CP__c</fullName>
    <label>Were any deviations applied to this CP?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>