force-app/main/default/objects/BET_BDD_Form__c/fields/Inc_Country__c.field-meta.xml
<CustomField>
    <fullName>Inc_Country__c</fullName>
    <label>Search Incorporation Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BET_GT_Country</valueSetName>
    </valueSet>
</CustomField>