force-app/main/default/objects/BET_BDD_Form__c/fields/Inc_State_Province__c.field-meta.xml
<CustomField>
    <fullName>Inc_State_Province__c</fullName>
    <label>Search Incorporation State/Province</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BET_GT_Inc_State_Province</valueSetName>
    </valueSet>
</CustomField>