force-app/main/default/objects/BET_BDD_Form__c/fields/Is_LoggedIn_User_Approver__c.field-meta.xml
<CustomField>
    <fullName>Is_LoggedIn_User_Approver__c</fullName>
    <formula>IF( BDD_Approver__r.Id == $User.Id, true, false)</formula>
    <label>LoggedIn user is Approver?</label>
    <type>Checkbox</type>
</CustomField>