force-app/main/default/objects/BET_BDD_Form__c/fields/IsErroredInBulkBatch__c.field-meta.xml
<CustomField>
    <fullName>IsErroredInBulkBatch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsErroredInBulkBatch</label>
    <type>Checkbox</type>
</CustomField>