force-app/main/default/objects/BET_BDD_Form__c/fields/IsExecutedInBulkBatch__c.field-meta.xml
<CustomField>
    <fullName>IsExecutedInBulkBatch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsExecutedInBulkBatch</label>
    <type>Checkbox</type>
</CustomField>