force-app/main/default/objects/BET_BDD_Form__c/fields/IsSuccessInBulkBatch__c.field-meta.xml
<CustomField>
    <fullName>IsSuccessInBulkBatch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsSuccessInBulkBatch</label>
    <type>Checkbox</type>
</CustomField>