force-app/main/default/objects/BET_BDD_Form__c/fields/Last_Modifiedby_User__c.field-meta.xml
<CustomField>
    <fullName>Last_Modifiedby_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last User Modified By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>BDD_Forms1</relationshipName>
    <type>Lookup</type>
</CustomField>