force-app/main/default/objects/BET_BDD_Form__c/fields/MDN_BA_Acc_Num__c.field-meta.xml
<CustomField>
    <fullName>MDN_BA_Acc_Num__c</fullName>
    <label>* Account Number</label>
    <length>32</length>
    <type>Text</type>
</CustomField>