force-app/main/default/objects/BET_BDD_Form__c/fields/MDN_BA_Bank_ABA_RNum__c.field-meta.xml
<CustomField>
    <fullName>MDN_BA_Bank_ABA_RNum__c</fullName>
    <label>Bank ABA or Routing Number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>