force-app/main/default/objects/BET_BDD_Form__c/fields/MDN_BA_BankName__c.field-meta.xml
<CustomField>
    <fullName>MDN_BA_BankName__c</fullName>
    <label>* Bank Name</label>
    <length>64</length>
    <type>Text</type>
</CustomField>