force-app/main/default/objects/BET_BDD_Form__c/fields/MDN_BA_BankType__c.field-meta.xml
<CustomField>
    <fullName>MDN_BA_BankType__c</fullName>
    <label>Bank Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary</fullName>
            </value>
            <value>
                <fullName>Intermediary</fullName>
            </value>
            <value>
                <fullName>For Further credit to</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>