force-app/main/default/objects/BET_BDD_Form__c/fields/MDN_BA_BenAccName__c.field-meta.xml
<CustomField>
    <fullName>MDN_BA_BenAccName__c</fullName>
    <label>Beneficiary Name / Bank Account Name</label>
    <length>64</length>
    <type>Text</type>
</CustomField>