force-app/main/default/objects/BET_BDD_Form__c/fields/MDN_BA_Branch_Name__c.field-meta.xml
<CustomField>
    <fullName>MDN_BA_Branch_Name__c</fullName>
    <label>Bank Branch Name</label>
    <length>64</length>
    <type>Text</type>
</CustomField>